--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" href="_assets/img/favicon/favicon-16x16.png" sizes="16x16"/>
     <link rel="icon" type="image/png" href="_assets/img/favicon/favicon-32x32.png" sizes="16x16"/>
 
-    <title>Hello World</title>
+    <title>Levidio Wedding Vol 2 - Website Templates</title>
 
     <!-- CSS  -->
     <!-- Bootstrap -->
